--- a/www/index.html
+++ b/www/index.html
@@ -7,11 +7,12 @@
 	</head>
 
 	<body>
-		<canvas id="canvas" width="672" height="864">
+		<canvas id="canvas" width="336" height="432">
 			Your browser doesn't support canvas.
 		</canvas>
 	</body>
 
-	<script type="text/javascript" src="js/index.js"></script>
+	<script src="js/main.js" type="text/javascript"></script>
+	<script src="js/index.js" type="text/javascript"></script>
 
 </html>
