--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
 		</canvas>
 	</body>
 
+	<script src="js/player.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
 	<script src="js/index.js" type="text/javascript"></script>
 
