--- a/www/index.html
+++ b/www/index.html
@@ -7,13 +7,19 @@
 	</head>
 
 	<body>
+		<!--<img id="level" src="img/level.png" />-->
 		<canvas id="canvas" width="336" height="432">
 			Your browser doesn't support canvas.
 		</canvas>
+
+		<!--<canvas id="canvastest" width="336" height="432">-->
+			<!--Your browser doesn't support canvas.-->
+		<!--</canvas>-->
+
 	</body>
 
+	<script src="js/index.js" type="text/javascript"></script>
 	<script src="js/player.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
-	<script src="js/index.js" type="text/javascript"></script>
 
 </html>
