add quadrant movement

--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<!--<img id="level" src="img/level.png" />-->
+		<img id="level" src="img/level.png" />
 		<canvas id="canvas" width="336" height="432">
 			Your browser doesn't support canvas.
 		</canvas>
